Added gamepad configs

--- a/raw/default_controller_unbind.cfg
+++ b/raw/default_controller_unbind.cfg
@@ -1,5 +1,8 @@
 // X360Controller clear controls
 
+seta gpad_buttonsConfig "buttons_default_alt"
+seta gpad_sticksConfig "thumbstick_default"
+
 unbind BUTTON_RSHLDR
 unbind BUTTON_LSHLDR
 unbind BUTTON_RTRIG
