--- a/raw/init_remastered.cfg
+++ b/raw/init_remastered.cfg
@@ -33,6 +33,7 @@ seta cg_fovComp_enable "1"
 seta safeArea_horizontal "1"
 seta safeArea_vertical "1"
 seta safeArea_ui "1"
+seta safeArea_updateLive "2"
 seta cg_draw2D_ui "1"
 seta cl_paused_ui "0"
 
